--- a/AppBuscaCEP/AppBuscaCEP/MainPage.xaml
+++ b/AppBuscaCEP/AppBuscaCEP/MainPage.xaml
@@ -7,7 +7,7 @@
         <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
             <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
+        <Button x:Name="BairroByCidade" Clicked="BairroByCidade_Clicked" Grid.Row="0" Grid.Column="0"/>
        
     </StackLayout>
 
