--- a/AppBuscaCEP/AppBuscaCEP/App.xaml
+++ b/AppBuscaCEP/AppBuscaCEP/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppBuscaCEP.App">
     <Application.Resources>
-        <Style x:Key="botao" TargetType="Button">
+        <Style TargetType="Button">
             <Setter Property="BackgroundColor" Value="#20994a"/>
             <Setter Property="BorderWidth" Value="20"/>
             <Setter Property="TextColor" Value="White"/>
@@ -12,6 +12,26 @@
         <Style TargetType="NavigationPage">
             <Setter Property="BarBackgroundColor" Value="#20994a" />
             <Setter Property="BarTextColor" Value="White" />
+        </Style>
+
+        <Style x:Name="fonteRegular"  TargetType="Label">
+            <Setter Property="FontFamily" x:Name="Fonte">
+                <Setter.Value>
+                    <OnPlatform x:TypeArguments="x:String"
+                                    Android="Biko_Regular.otf#Biko_Regular" />
+                </Setter.Value>
+            </Setter>
+            <Setter Property="TextColor" Value="Black"/>
+        </Style>
+
+        <Style x:Key="fonteNegrito" TargetType="Label">
+            <Setter Property="FontFamily" x:Name="FonteBold">
+                <Setter.Value>
+                    <OnPlatform x:TypeArguments="x:String"
+                                    Android="Biko_Regular.otf#Biko_Regular" />
+                </Setter.Value>
+            </Setter>
+            <Setter Property="TextColor" Value="Black"/>
         </Style>
     </Application.Resources>
 </Application>
