--- a/AppBuscaCEP/AppBuscaCEP/View/BairrosPorCidade.xaml
+++ b/AppBuscaCEP/AppBuscaCEP/View/BairrosPorCidade.xaml
@@ -1,19 +1,54 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppBuscaCEP.View.BairrosPorCidade">
+             x:Class="AppBuscaCEP.View.BairrosPorCidade" Title="Bairros por Cidade">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Estado:"/>
-            <Picker x:Name="pck_uf"
-                            
-                            Title="Selecione o estado desejado:"/>
-            
-            <Label Text="Cidade:"/>
-            <Picker x:Name="pck_cidade"
-                            
-                            Title="Selecione a cidade desejada:"/>
-            <Button Text="Procurar" x:Name="pesquisar_cidade" Clicked="pesquisar_cidade_Clicked" />
+            <StackLayout Orientation="Horizontal">
+                <Picker x:Name="pck_estado"
+                 SelectedIndexChanged="pck_estado_SelectedIndexChanged"
+                 Title="Selecione o estado:">
+                    <Picker.Items>
+                        <x:String>SP</x:String>
+                        <x:String>MG</x:String>
+                    </Picker.Items>
+
+                </Picker>
+
+                <Picker x:Name="pck_cidade"
+                     SelectedIndexChanged="pck_cidade_SelectedIndexChanged"
+                     ItemDisplayBinding="{Binding descricao}"
+                     Title="Selecione a cidade:">
+                </Picker>
+
+            </StackLayout>
+
+            <ActivityIndicator x:Name="carregando" IsRunning="False"/>
+
+            <ListView x:Name="lst_bairros">
+                <ListView.Header>
+                    <Grid ColumnDefinitions="Auto"
+                         RowDefinitions="Auto">
+                        <Label Grid.Row="0" Grid.Column="0"
+                               Text=""/>
+
+                    </Grid>
+                </ListView.Header>
+                <ListView.ItemTemplate>
+
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid ColumnDefinitions="Auto"
+                          RowDefinitions="Auto">
+                                <Label Grid.Row="0" Grid.Column="0"
+                               Text="{Binding descricao_bairro}"/>
+
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
